# acts

./: CMakeLists.txt
ACTS_install/include/Acts/: ActsVersion.hpp
ACTS_install/include/Acts/Seeding/: BinnedSPGroup.hpp  Seedfinder.ipp  SeedfinderCUDAKernels.cuh
ACTS_install/share/cmake/Acts/: ActsConfig.cmake  ActsConfigVersion.cmake  ActsCoreTargets-noconfig.cmake  ActsCoreTargets.cmake  ActsFatrasTargets-noconfig.cmake
Core/: CMakeLists.txt
Core/include/Acts/Seeding/: #IExperimentCuts.hpp#  #SeedFilter.hpp#  #SeedFilter.ipp#  IExperimentCuts.hpp  InternalSeed.hpp  InternalSpacePoint.hpp  Seed.hpp  SeedFilter.hpp  SeedFilter.ipp  Seedfinder.hpp  Seedfinder.ipp  SeedfinderCPUFunctions.hpp  SeedfinderCPUFunctions.ipp  SeedfinderCUDAKernels.cuh  SeedfinderConfig.hpp  SeedfinderKernels.cuh
Core/src/Seeding/: #SeedfinderCUDAKernels.cu#  CMakeLists.txt  SeedfinderCUDAKernels.cu  SeedfinderKernels.cu
Plugins/Cuda/: CMakeLists.txt
Plugins/Cuda/include/Acts/Plugins/Cuda/Seeding/: Kernels.cuh  Seedfinder.hpp  Seedfinder.ipp
Plugins/Cuda/include/Acts/Plugins/Cuda/Utilities/: CpuMatrix.hpp  CpuScalar.hpp  CpuVector.hpp  CudaMatrix.cu  CudaScalar.cu  CudaVector.cu
Plugins/Cuda/src/Seeding/: Kernels.cu  SeedfinderCudaKernels.cu
Tests/UnitTests/Core/: CMakeLists.txt
Tests/UnitTests/Core/Seeding/: ATLASCuts.hpp  CMakeLists.txt  SeedfinderCUDAValidate.cpp  SeedfinderTest.cpp  SpacePoint.hpp
Tests/UnitTests/Core/Utilities/: CMakeLists.txt  CUDAMatrixTest.cu
Tests/UnitTests/Plugins/Cuda/Seeding/: CMakeLists.txt  SeedfinderCudaTest.cpp  SeedfinderCudaValidate.cpp  (+1 more)
(+1 files in other folders)
